# JavaJniProject

./: README.md  build.gradle  jni.sh  settings.gradle
JniModule/: .gitignore  build.gradle
JniModule/jni/: CMakeLists.txt  jniutil.c  jniutil.h
JniModule/src/main/java/com/xiaoyunchengzhu/jni/: JniCallBack.java  JniResult.java  JniUtils.java
JniModule/src/test/java/com/xiaoyunchengzhu/jni/: JniUtilsTest.java
src/main/java/com/xiaoyunchengzhu/jni/: Main.java
