cmake_minimum_required(VERSION 3.5.1)
project(DecodeJni1)

set(CMAKE_CXX_STANDARD 14)
include_directories($ENV{JAVA_HOME}/include)
IF ( WIN32 )
    message('win 32')
ELSEIF( APPLE)
    set(enviroment darwin)
    message('apple')
ELSE()
    set(enviroment linux)
    message("linux")
ENDIF()
include_directories($ENV{JAVA_HOME}/include/${enviroment})
add_library(JniUtil SHARED jniutil.h jniutil.c)